[project]
name = "lumeh"
description = "The code for building lumeh.org"
version = "0.6.0"
authors = [
  {name = "Colin Chan", email = "colin+git@lumeh.org"},
]
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "libsass>=0.23.0",
    "mistletoe>=1.4.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
]

[project.scripts]
build = "lumeh:build"

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "ty>=0.0.1a8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "lib/htmlgen.py",
    "lib/lumeh",
    "lib/textmex",
    "lib/websleydale",
]
